--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.pizzerialleshi"
-        minSdk 24
+        minSdk 23
         targetSdk 35
         versionCode 1
         versionName "1.0"
@@ -45,7 +45,8 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation platform('com.google.firebase:firebase-bom:33.9.0')
-    implementation 'com.google.firebase:firebase-auth:22.1.1'
+    implementation 'com.google.firebase:firebase-auth:22.3.1'
+    implementation 'com.google.android.gms:play-services-auth:21.0.0'
     implementation 'com.google.android.material:material:1.11.0'
-
+    implementation 'com.google.firebase:firebase-auth'
 }
